src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
	margin: 0;
	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
		"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
		sans-serif;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	max-height: 100vh;
	height: 100vh;
	background: #121016;
	font-family: "Inter", sans-serif;
	overflow: hidden;
}

code {
	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
		monospace;
}

#root {
	height: 100%;
}

.jodit-react-container * {
	background: #222529 !important;
	border-color: #565856 !important;
}

.jodit-toolbar-button {
	border: none !important;
	stroke: #d1d2d3 !important;
}

.jodit-toolbar-button__icon svg,
.jodit-icon {
	fill: #d1d2d3 !important;
	width: 15px !important;
	height: 15px !important;
}

.jodit-toolbar-button__icon {
	stroke: #4b4e51 !important;
}

.jodit-react-container *::after {
	display: none !important;
}

.jodit-ui-group:nth-child(3) {
	display: none !important;
}

.jodit-toolbar__box {
	border-bottom: none !important;
	padding: 0.3rem;
}

/* .jodit-ui-separator {
	display: none !important;
} */

.jodit-popup__content {
	background: #222529 !important;
}

.jodit-ui-group {
	gap: 0.5rem;
}

.jodit-wysiwyg {
	min-height: 40px !important;
}

.jodit-wysiwyg::placeholder {
	color: #78797b;
}

